# python-project-83

./: .gitignore  Makefile  README.md  database.sql  hello.py  pyproject.toml  requirements.txt
.github/workflows/: my.yaml
page_analyzer/: app.py  const.py  pars.py  repo.py  result.py  tools.py
page_analyzer/templates/: base.html  error.html  index.html  url_info.html  url_list.html
